Cabeçalho quase pronto, apenas falta corrigir um problema aonde o texto fica fora da div

--- a/Desafio03/public_html/index.html
+++ b/Desafio03/public_html/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Desafio 03 - Folha</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./css/reset.css">
+        <link rel="stylesheet" type="text/css" href="./css/header.css">
+        <link rel="stylesheet" type="text/css" href="./css/body.css">
+
     </head>
     <body>
-        <div>TODO write content</div>
+        <div id="interface">
+            <header>
+                <div id="menu_icon">
+                    <img src="imagens/menu-icon.png">
+                </div>
+                <div id="imagem_logo">
+                    <img src="imagens/logo.png"/>
+                </div>
+                <div id="titulo">
+                    O site de teste para <b>novos webs</b>
+                </div>
+                <div id="facebook">
+                    facebook
+                </div>
+                <div id="twitter">
+                    twitter
+                </div>
+            </header>
+        </div>
     </body>
 </html>
