Imagem principal esta pronta, rodapé e primeira linha de imagens esta errada ainda

--- a/Desafio03/public_html/index.html
+++ b/Desafio03/public_html/index.html
@@ -4,8 +4,7 @@
         <title>Desafio 03 - Folha</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./css/reset.css">
-        <link rel="stylesheet" type="text/css" href="./css/header.css">
-        <link rel="stylesheet" type="text/css" href="./css/body.css">
+        <link rel="stylesheet" type="text/css" href="./css/estilo.css">
 
     </head>
     <body>
@@ -18,15 +17,74 @@
                     <img src="imagens/logo.png"/>
                 </div>
                 <div id="titulo">
-                    O site de teste para <b>novos webs</b>
+                    O site de teste para <span>novos webs</span>
                 </div>
                 <div id="facebook">
-                    facebook
+                    <a href="http://facebook.com" target="_blank">Facebook</a>
                 </div>
                 <div id="twitter">
-                    twitter
+                    <a href="http://twitter.com" target="_blank">Twitter</a>
                 </div>
             </header>
+
+
+
+            <section class="corpo">
+                <figure class="imagem_principal">
+                    <img src="imagens/image_rotate.png"/>
+                    <figcaption>
+                        <h3>
+                            <span>Atirei o pau no gatis, per gatis num morreus.</span>
+                        </h3>
+                        <p>Quem manda na minha terra sou euzis!</p>
+                    </figcaption>
+                </figure>
+
+                <div id="primeira_linha_imagens">
+                    <h1 id="top_calcidis">Top Calcildis</h1>
+
+                    <figure class="primeira_linha_imagens_01">
+                        <img src="imagens/highlight-01.png"/>
+                        <figcaption>
+                            <h3 class="titulos_primeira_linha">
+                                PINDURETA
+                            </h3>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="primeira_linha_imagens_02">
+                        <img src="imagens/highlight-02.png"/>
+                        <figcaption>
+                            <h3 class="titulos_primeira_linha">
+                                BOLIS
+                            </h3>
+                        </figcaption>
+                    </figure>
+
+                    <figure class="primeira_linha_imagens_03">
+                        <img src="imagens/highlight-03.png"/>
+                        <figcaption>
+                            <h3 class="titulos_primeira_linha">
+                                SAPIEN
+                            </h3>
+                        </figcaption>
+                    </figure>
+                </div>
+                
+            </section>
+            
+
+            <footer>
+                <div id="imagem_rodape">
+                    <img src="imagens/logo_footer.png"/>
+                </div>
+                <div id="texto_rodape">
+                    Copyright Folha de S. Paulo. Todos os direitos reservados. E proibida a reproduçao do conteudo desta pagina em qualquer<br>
+                    meio de comunicaçao, eletronico ou impresso, sem autorizaçao escrita da Folhapress (pesquisa@folhapress.com.br).
+                </div>
+            </footer>
+
+
         </div>
     </body>
 </html>
